src/objects/Blog__c.object
<CustomObject>
    <fields>
        <fullName>AllowComments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sub_Title__c</fullName>
        <label>Sub-Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <label>Theme</label>
        <picklist>
            <picklistValues>
                <fullName>Spirits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Blog</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>Sub_Title__c</columns>
        <columns>Theme__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>